src/app/globals.css
@import 'tailwindcss';

@custom-variant dark (&.dark, .dark &);

@layer base {
  body {
    background-color: theme(colors.white);
    color: theme(colors.black);
    @apply text-xs lg:text-sm;

    @variant dark {
      background-color: theme(colors.black);
      color: theme(colors.white);
    }
  }
}

@layer components {
  .centralize {
    @apply flex items-center justify-center text-center;
  }
  .product-card {
    background-color: theme(colors.neutral.100);
    color: theme(colors.neutral.900);
    @variant dark {
      background-color: theme(colors.neutral.900);
      color: theme(colors.neutral.200);
    }

    @apply rounded-lg shadow-md;
    @apply flex flex-col items-center justify-center text-center;
  }

  .toggle-button {
    @apply transition-colors;
    color: theme(colors.neutral.800);
    &[data-state='active'] {
      a&,
      & {
        color: theme(colors.black);
      }
    }

    &[data-state='active'][data-open='true'] {
      @apply font-bold;
    }
    &:hover {
      a&,
      & {
        color: theme(colors.neutral.900);
        @apply cursor-pointer;
      }
    }

    @variant dark {
      @apply transition-colors;
      color: theme(colors.neutral.300);
      &[data-state='active'] {
        a&,
        & {
          color: theme(colors.white);
        }
      }

      &[data-state='active'][data-open='true'] {
        @apply font-bold;
      }

      &:hover {
        a&,
        & {
          color: theme(colors.neutral.100);
          @apply cursor-pointer;
        }
      }
    }
  }

  .header-gradation {
    @apply bg-gradient-to-b from-neutral-100 to-transparent;

    @variant dark {
      @apply bg-gradient-to-b from-neutral-700 to-transparent;
    }
  }

  .side-bar {
    background-color: theme(colors.white);
    color: theme(colors.black);
    @apply opacity-95;

    @variant dark {
      background-color: theme(colors.black);
      color: theme(colors.white);
    }
  }

  .cart-product-card {
    background-color: theme(colors.neutral.100);
    color: theme(colors.neutral.900);

    @variant dark {
      background-color: theme(colors.neutral.900);
      color: theme(colors.white);
    }

    @apply rounded-lg shadow-md;
    @apply flex flex-row items-center justify-evenly text-center;
  }

  .filter-group {
    @apply flex items-center gap-2;
    @apply md:flex-col md:items-start;
  }
}

